addedd .env file and volume for database

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     build: requirements/mariadb/.
     container_name: mariadb
     restart: on-failure
+    volumes:
+    - /home/rpodack/data:/var/lib/mysql
    # networks:
   #    inception:
       
