--- a/src/requirements/nginx/Dockerfile
+++ b/src/requirements/nginx/Dockerfile
@@ -12,10 +12,13 @@ RUN mkdir /etc/nginx/ssl
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/ssl/inception.key -out /etc/nginx/ssl/inception.crt \
 -subj "/C=FR/ST=Berlin/L=Berlin/O=42/OU=42/CN=rpodack.42.fr"
 
-#RUN ln -s /etc/nginx/sites-available/rpodack.42.fr /etc/nginx/sites-enabled/
+
 
 
 COPY default /etc/nginx/sites-available/default
 
+RUN chmod 755 /var/www/html
+
+#RUN chown -R www-data:www-data /var/www/html
 
 CMD ["nginx", "-g", "daemon off;"]
