fixed apt error ; still exitcode 137

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   nginx:
     build: requirements/nginx/.
     container_name: nginx
+    image: nginx:v1.0
     env_file:
       - .env
     restart: on-failure
