--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   nginx:
     build: requirements/nginx/.
@@ -28,6 +27,8 @@ services:
     restart: on-failure
     volumes:
       - /home/rpodack/data/wordpress:/var/www/html
+    ports:
+      - "9000:9000"
     expose:
       - "9000"
     networks:
@@ -45,6 +46,8 @@ services:
     restart: on-failure
     volumes:
     - /home/rpodack/data/mariadb:/var/lib/mysql
+    ports:
+      - "3306:3306"
     expose:
       - "3306"
     networks:
