--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   nginx:
     build: requirements/nginx/.
@@ -9,7 +11,7 @@ services:
     ports:
       - "443:443"
     volumes:
-      - /home/rpodack/data/wordpress:/var/www/html
+      - wordpress:/var/www/html
     networks:
       inception:
 
@@ -26,7 +28,7 @@ services:
       - wp_admin_password
     restart: on-failure
     volumes:
-      - /home/rpodack/data/wordpress:/var/www/html
+      - wordpress:/var/www/html
     ports:
       - "9000:9000"
     expose:
@@ -45,7 +47,7 @@ services:
       - db_password
     restart: on-failure
     volumes:
-    - /home/rpodack/data/mariadb:/var/lib/mysql
+    - mariadb:/var/lib/mysql
     ports:
       - "3306:3306"
     expose:
@@ -69,3 +71,9 @@ secrets:
       
 networks:
   inception:
+  
+volumes:
+  wordpress:
+    name: wordpress
+  mariadb:
+    name: mariadb
